--- a/Examen2_Soporte/Examen2_Soporte/Examen2_Soporte.csproj
+++ b/Examen2_Soporte/Examen2_Soporte/Examen2_Soporte.csproj
@@ -43,8 +43,8 @@
   
   
   <ItemGroup>
-    <Folder Include="Modelos\" />
     <Folder Include="Controladores\" />
+    <Folder Include="Vistas\" />
   </ItemGroup>
 
 </Project>
