--- a/Examen2_Soporte/Examen2_Soporte/App.config
+++ b/Examen2_Soporte/Examen2_Soporte/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<add name="SoporteConexion"
-			 connectionString="DataBase=Soporte; Server=ELVINH5;Integrated Security=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient"/>
-	</connectionStrings>
+			 connectionString="Data Source=ELVINH5;Initial Catalog=Soporte; Integrated Security=True; " providerName="System.Data.SqlClient"/>
+	</connectionStrings>                                                   
 </configuration>
